[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-wordpress-support"
version = "2.4"
description = "Library for WordPress."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "python3-cyberfusion-common~=2.12",
    "python3-cyberfusion-database-support~=3.5",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-wordpress-support"
